# report_gen

./: .gitignore  AGENTS.md  Dockerfile.linux-build  Makefile  README.md  [Template] [LEA] SASS Certification Automation Test Report_output.xlsx  build-linux.sh  fill_report.py  main.py  requirements-linux.txt  requirements.txt  test_summary (1).yaml  test_summary (2).yaml  test_summary.yaml
.github/workflows/: release-desktop.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
frontend/src-tauri/src/domain/: aggregate.rs  export.rs  mod.rs  models.rs  summary.rs
frontend/src/api/: client.ts
frontend/src/components/: DetailPanel.tsx  ExecutionTable.tsx  FileUploadPanel.tsx  GroupTable.tsx  SidebarPanel.tsx
frontend/src/pages/: AnalysisPage.tsx  DetailsPage.tsx  ExecutionsPage.tsx  GroupsPage.tsx  ImportPage.tsx
report_gui/: __init__.py  data_loader.py  exporter.py  gui.py  layout.py  models.py  stats.py  ui_helpers.py  view_model.py
scripts/: build_linux.py  build_linux_docker.sh
tests/: test_data_loader.py  test_exporter.py  test_layout.py  test_main.py  test_ui_helpers.py  test_view_model.py
