[package]
name = "report_gen_tauri"
version = "0.1.0"
description = "Desktop report generator powered by Tauri and Rust"
authors = ["cy76"]
edition = "2021"

[lib]
name = "report_gen_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.11"
umya-spreadsheet = "2.3.3"

